@@ -53,7 +53,6 @@ import cascading.tuple.TupleEntryIterator;
 import java.io.File;
 import java.util.HashMap;
 import java.util.Map;
-import java.util.regex.Pattern;
 
 public class FieldedPipesTest extends ClusterTestCase
   {
@@ -796,7 +795,7 @@ public class FieldedPipesTest extends ClusterTestCase
    *
    * @throws Exception
    */
-/*  public void testChainedTaps() throws Exception
+  public void testChainedTaps() throws Exception
     {
     if( !new File( inputFileApache ).exists() )
       fail( "data file not found" );
@@ -819,8 +818,7 @@ public class FieldedPipesTest extends ClusterTestCase
     Tap sinkSecond = new Hfs( new SequenceFile( new Fields( "ip" ) ), path + "second", true );
     Tap sinkThird = new Hfs( new SequenceFile( new Fields( "ip" ) ), path + "third", true );
 
-    Map<String, Tap> sinks = Cascades.tapsMap( new String[]{"first", "second",
-      "third"}, Tap.taps( sinkFirst, sinkSecond, sinkThird ) );
+    Map<String, Tap> sinks = Cascades.tapsMap( new String[]{"first", "second", "third"}, Tap.taps( sinkFirst, sinkSecond, sinkThird ) );
 
     Flow flow = new FlowConnector( getProperties() ).connect( source, sinks, pipe );
 
@@ -831,27 +829,7 @@ public class FieldedPipesTest extends ClusterTestCase
     flow.complete();
 
     validateLength( flow, 3, null );
-    }*/
-  public void testReplace() throws Exception
-    {
-    if( !new File( inputFileApache ).exists() )
-      fail( "data file not found" );
-
-    Tap source = new Hfs( new TextLine(), inputFileApache );
-    Tap sink = new Hfs( new TextLine(), outputPath + "/replace", true );
-
-    Pipe pipe = new Pipe( "test" );
-
-    Function parser = new RegexParser( new Fields( "line" ), "^[^ ]*" );
-    pipe = new Each( pipe, new Fields( "line" ), parser, Fields.REPLACE );
-
-    Flow flow = new FlowConnector().connect( source, sink, pipe );
-
-//    flow.writeDOT( "simple.dot" );
-
-    flow.complete();
-
-    validateLength( flow, 10, 2, Pattern.compile( "\\d*\\s\\d*\\s[\\d]{1,3}\\.[\\d]{1,3}\\.[\\d]{1,3}\\.[\\d]{1,3}" ) );
     }
+
 
   }
